<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>com.gmail.filoghost.chestcommands</groupId>
		<artifactId>chestcommands-parent</artifactId>
		<version>3.3.0-SNAPSHOT</version>
	</parent>

	<artifactId>chestcommands-plugin</artifactId>
	<name>ChestCommands Plugin</name>

	<repositories>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
		</repository>

		<repository>
			<id>vault-repo</id>
			<url>http://nexus.hc.to/content/repositories/pub_releases</url>
		</repository>

		<repository>
			<id>confuser-repo</id>
			<url>https://ci.frostcast.net/plugin/repository/everything/</url>
		</repository>

		<repository>
			<id>bstats-repo</id>
			<url>https://repo.codemc.org/repository/maven-public/</url>
		</repository>

		<repository>
			<id>placeholderapi-repo</id>
			<url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
		</repository>

		<repository>
			<id>aikar</id>
			<url>https://repo.aikar.co/content/groups/aikar/</url>
		</repository>

		<repository>
			<id>puha-repo</id>
			<url>http://repo.puha.io/repo/</url>
		</repository>

		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>

		<repository>
			<id>tta-repo</id>
			<url>http://releases.herbystar.eu/</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>${spigot-api.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>net.milkbowl.vault</groupId>
			<artifactId>VaultAPI</artifactId>
			<version>1.6</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>me.confuser</groupId>
			<artifactId>BarAPI</artifactId>
			<version>3.5</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>me.clip</groupId>
			<artifactId>placeholderapi</artifactId>
			<version>2.9.2</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.bstats</groupId>
			<artifactId>bstats-bukkit-lite</artifactId>
			<version>1.4</version>
		</dependency>

		<dependency>
			<groupId>com.udojava</groupId>
			<artifactId>EvalEx</artifactId>
			<version>2.1</version>
		</dependency>

		<dependency>
			<groupId>org.black_ixx</groupId>
			<artifactId>PlayerPoints</artifactId>
			<version>2.1.5-SNAPSHOT</version>
			<optional>true</optional>
			<scope>system</scope>
			<systemPath>${project.basedir}/lib/PlayerPoints.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>com.github.Realizedd</groupId>
			<artifactId>TokenManager</artifactId>
			<version>3.2.3</version>
			<optional>true</optional>
			<scope>system</scope>
			<systemPath>${project.basedir}/lib/TokenManager.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>co.aikar</groupId>
			<artifactId>taskchain-bukkit</artifactId>
			<version>LATEST</version>
		</dependency>

		<dependency>
			<groupId>me.arcaniax</groupId>
			<artifactId>HeadDatabaseAPI</artifactId>
			<scope>system</scope>
			<version>1.0</version>
			<systemPath>${basedir}/lib/HeadDatabaseAPI.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>io.puharesource.mc</groupId>
			<artifactId>TitleManager</artifactId>
			<version>2.0.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.github.ConnorLinfoot</groupId>
			<artifactId>TitleAPI</artifactId>
			<version>1.7.6</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>de.Herbystar</groupId>
			<artifactId>TTA</artifactId>
			<version>LATEST</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.github.ConnorLinfoot</groupId>
			<artifactId>BountifulAPI</artifactId>
			<version>1.6.4</version>
			<scope>system</scope>
			<systemPath>${basedir}/lib/BountifulAPI.jar</systemPath>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
			<resource>
				<directory>..</directory>
				<includes>
					<include>LICENSE.txt</include>
					<include>THIRD-PARTY.txt</include>
				</includes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.1</version>
				<configuration>
					<createDependencyReducedPom>false</createDependencyReducedPom>
					<filters>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>META-INF/</exclude>
							</excludes>
						</filter>
					</filters>
					<relocations>
						<relocation>
							<pattern>org.bstats</pattern>
							<shadedPattern>com.gmail.filoghost.chestcommands.metrics</shadedPattern>
						</relocation>
					</relocations>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>8</source>
					<target>8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>